# remote_job_agent

./: .env.example  .gitignore  Dockerfile  README.md  agentcore_config.json  gateway_schema.json  pyproject.toml  requirements.txt  resume.json  streamlit_app.py  test_local.py
src/job_application_coach/: crew.py  main.py  pdf_generator.py  runtime_handler.py
src/job_application_coach/config/: agents.yaml  tasks.yaml
src/job_application_coach/tools/: s3_resume_tool.py
templates/: resume_template.html
