[project]
name = "job_application_coach"
version = "0.1.0"
description = "Job Application Coach using CrewAI on Bedrock AgentCore"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.7",
    "crewai[tools]>=1.14.0",
    "streamlit>=1.50.0",
    "requests>=2.31.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
]

[project.scripts]
job_application_coach = "job_application_coach.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
